# ModelHATPC

./: .dockerignore  .pre-commit-config.yaml  ALGORITHM.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
ClustersEvaluation/: PointNColumns.py  README.md  Ratio_Diag_HC.py  SignalPointOverlayWF.py  SignalTrackClusterWF.py  SignalTrackClusterWFVertical.py
Headers/: ClustersUtils.py  GeometryUtils.py  GridUtils.py  ModelUtils.py  README.md  __init__.py
LUT/: HAT_dEdx_LUT_maker.py  LUT_maker_vTTree.py  LUT_visualizer.py  README.md  Ratio_estimator.py
Model/: GridPoint.py  GridTrack.py  README.md
ThesisPlots/: README.md
ThesisPlots/MSW/: MSW.py
ThesisPlots/Oscillations/: oscillationsAccelerators.py  oscillationsReactors.py  oscillationsWithCheckbox.py  oscillations_minimal.py
ThesisPlots/PMNS_CKM/: PMNS_CKM.py
scripts/: start.sh
