[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelhatpc"
version = "0.0.0"
description = "ModelHATPC — analysis tools and models for HATPC"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Tristan Daret", email = "tristan.daret.phd@gmail.com" } ]
requires-python = ">=3.8"
keywords = ["HATPC", "model", "tracks"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=2.20"
]

[project.urls]
Homepage = "https://github.com/tristandaret/ModelHATPC"

[tool.black]
line-length = 88
target-version = ["py38"]
